# Ryze-Data

./: .bench.env.example  .env.example  .gitignore  README.md  config.example.json  progress.md  pyproject.toml  pytest.ini  requirements.txt  run_tests.py
data-sample/: nature04244.json
data-sample/abstract/: nature04244_abstract.txt
data-sample/sft_data/: nature04244_qa.jsonl
data/id_mappings/: slidevqa_id_mapping.json
docs/: api-reference.md  architecture.md  benchmark-scripts.md  configuration.md  data-formats.md  development.md  troubleshooting.md
docs/zh-CN/: README.md  architecture.md  configuration.md  development.md
prompts/benchmark/: free_text.txt  multiple_choice.txt
prompts/text/: answerability.txt  application.txt  factual.txt  mechanism.txt  quality.txt
prompts/vision/: visual-analysis.txt  visual-answerability.txt  visual-comparison.txt  visual-data-extraction.txt  visual-factual.txt  visual-mechanism.txt  visual-quality.txt
scripts/: QUICKSTART.md  README.md  bench.sh  install.sh  merge_benchmark_reports.py  reorganize_glm_ocr.py  run_benchmark.sh  run_custom_inference.py  test_ocr_all.sh  test_ocr_real.py
src/: README.md  api_key_balancer.py  chunked-ocr.py  config_manager.py  pipeline_manager.py
tests/: .env.test  README.md  __init__.py  config.test.json  conftest.py  test_benchmark_datasets.py  test_benchmark_evaluator.py  test_benchmark_metrics.py  test_benchmark_qa_client.py  test_deepseek_ocr.py  test_generators.py  test_marker_ocr.py  test_markitdown_ocr.py  test_ocr.py  test_ocr_benchmark_utils.py  test_ocr_stubs.py
(+76 files in other folders)
